# peupajoh

./: .gitignore  README.md
backend/: .env.example  Makefile  main.py  pyproject.toml  run_server.py
backend/agents/: agents.py  base.py  food_extractor.py  food_extractor_agent.py  food_items_clarificator.py  food_search.py  food_search_agent.py  main_routing.py  main_workflow.py  mock_meal_data.py  nutrition_advisor.py
backend/agents/tools/: search_fatsecret.py  search_fatsecret_detail.py  search_food_in_db.py
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: chat.py  health.py  sessions.py
backend/app/core/: __init__.py  exceptions.py  responses.py
backend/app/db/: __init__.py  models.py
backend/app/middleware/: error_handler.py  logging.py
backend/config/: agent.py  database.py  settings.py  sqlite.py  variable.py
backend/config/enum/: framework.py  llm_provider.py
backend/data/: peupajoh.sqlite3
backend/helper/: helper.py  logger.py
backend/interfaces/: interfaces.py
backend/models/: __init__.py  extraction.py  food.py  models.py  nutrition.py  session.py
backend/repositories/: __init__.py  analyze_nutrition.py  extraction.py  session.py
backend/repositories/mock_data/: mock_meal_data.py
backend/repositories/models/: __init__.py  extraction.py
backend/scripts/migrations/: migrate_sessions_table.py
backend/scripts/seeder/: indonesian_food_nutrition.py
backend/search/: search.py
backend/usecase/: main_routing.py  main_workflow.py
frontend/: package.json
(+21 files in other folders)
