[project]
name = "peupajoh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.0.11",
    "aiosqlite>=0.21.0",
    "anthropic>=0.69.0",
    "bs4>=0.0.2",
    "openai>=2.3.0",
    "pydantic>=2.11.9",
    "rapidfuzz>=3.14.1",
    "requests>=2.32.5",
    "ruff>=0.13.2",
    "sqlalchemy>=2.0.43",
    "uvicorn>=0.37.0",
]
