[project]
name = "peupajoh"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=2.0.11",
    "aiosqlite>=0.21.0",
    "alembic>=1.17.0",
    "anthropic>=0.69.0",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.115.0",
    "httpx>=0.28.1",
    "openai>=2.3.0",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "rapidfuzz>=3.14.1",
    "requests>=2.32.5",
    "ruff>=0.13.2",
    "sqlalchemy>=2.0.43",
    "sse-starlette>=2.2.1",
    "uvicorn>=0.37.0",
]
